# riin

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: configuration-explain.md
scripts/: download-binaries.sh  download-binaries.ts  release.sh  release.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/resources/: config.default.yml
tauri/src/: lib.rs  main.rs
tauri/src/commands/: cancel_oauth_login.rs  delete_credential.rs  is_proxy_running.rs  mod.rs  read_config.rs  read_credentials.rs  start_oauth_login.rs  start_proxy.rs  stop_proxy.rs  write_config.rs  write_credential.rs
tauri/src/helpers/: auth.rs  config.rs  ensure_config.rs  mod.rs  proxy.rs
tauri/src/types/: credential.rs  mod.rs  oauth.rs  proxy.rs
ui/: index.html  main.tsx
ui/core/icon/: config.ts
ui/core/stores/: config.ts  credential.ts  index.ts  layout.ts  models.ts  server.ts  theme.ts
ui/core/styles/: fonts.css  main.css  theme.css
ui/core/types/: index.ts
ui/core/ui/: button-refresh.tsx  index.ts  loading.tsx
ui/modules/accounts/: index.ts
ui/modules/accounts/components/: button-add-account.tsx  button-delete-account.tsx  button-view-raw-credential.tsx  screen-accounts.tsx  toggle-status.tsx
ui/modules/configuration/: index.ts
ui/modules/credentials/: index.ts
ui/modules/form/: index.ts
ui/modules/models/: index.ts
ui/modules/providers/: index.ts
ui/modules/proxy/: index.ts
(+27 files in other folders)
