[package]
name = "riin"
version = "0.1.0"
edition = "2021"
default-run = "riin"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
dirs = "6"
